--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,13 @@
 version: 0.2
 
+env:
+  variables:
+    ENV: "stage"
+
 phases:
   build:
     commands:
+      - echo "Variable is $ENV"
       - echo Build started on `date`
       - echo Compiling the Go code...
       - go build hello.go
