--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,7 @@ phases:
   build:
     commands:
       - echo "Variable is $ENV"
+      - echo "Submited variable is $SUBMIT_ENV"
       - echo Build started on `date`
       - echo Compiling the Go code...
       - go build hello.go
